[project]
name = "enigma-cipher"
version = "0.1.0"
description = "Historical Enigma Machine Cipher Implementation"
authors = [
    {name = "loboguardian"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)"
]

[project.scripts]
enigma-gui = "enigma_gui:main"
enigma-cli = "main:__main__"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
